crates/eden-toml/src/snapshots/eden_toml__tests__diagnostic_emit.snap
---
source: crates/eden-toml/src/lib.rs
expression: diagnostic
---
error: key with no value, expected `=`
  ┌─ hello.rs:1:6
  │
1 │ hello
  │      ^ key with no value, expected `=`
